Was rewrite activity with fragment. Started using bundle for arguments

--- a/app/src/main/res/layout/acticity_item.xml
+++ b/app/src/main/res/layout/acticity_item.xml
@@ -45,15 +45,15 @@
         app:layout_constraintBottom_toBottomOf="@+id/itemActivityCreated"
         app:layout_constraintStart_toEndOf="@+id/itemActivityCreated" />
 
-    <ImageView
+    <ImageButton
         android:id="@+id/itemActivityBtnEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:background="@drawable/ic_icons8_edit"
         android:clickable="true"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_edit" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
