--- a/app/src/main/res/layout/add.xml
+++ b/app/src/main/res/layout/add.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:ems="10"
+        android:hint="Title"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,6 +24,7 @@
         android:layout_height="350dp"
         android:ems="10"
         android:gravity="start|top"
+        android:hint="Comment"
         android:inputType="textMultiLine"
         app:layout_constraintStart_toStartOf="@+id/title"
         app:layout_constraintTop_toBottomOf="@+id/title" />
